style.scss
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    list-style-type: none;
    text-decoration: none;
    font-family: 'Zen Loop', cursive;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

a:hover {
    font-weight: 800;
}

// VARIABLES
:root {
    --chocolate: #795749;
    --choco-dark: #624f48;
    --choco-darkest: #2e2522;
    --bg: #d9d5ca;
    --footer-nav-content-width: 80vw;
    --nav-height: 4.5rem;
}

.flex {
    display: flex;
    gap: 1.4rem;
    align-items: center;
}

i {
    color: white;
}

.wrapper {
    justify-content: space-between;
    margin: 0 auto;
    width: 100%;
    max-width: var(--footer-nav-content-width);
    height: 100%;
}

.underline {
    text-decoration: underline;
}

body {
    background-color: var(--bg);
    background-image: url(/images/cocoabg.webp);
    height: 100vh;
    height: 100dvh;
    background-position: center;
    display: grid;
    grid-template-rows: auto 1fr auto;
}

h1,
h2,
h3,
h4,
h5,
a,
span,
p {
    color: white;
    max-width: 45ch;
}

a {
    font-size: 1.6rem;
    color: white;
    cursor: pointer;
}

h1 {
    font-size: 11.25rem;
}
h2 {
    font-size: 5.625rem;
}
h3 {
    font-size: 2.8125rem;
}
h4 {
    font-size: 2.4rem;
}
h5 {
    font-size: 1.7rem;
}

img {
    max-width: 100%;
    object-fit: cover;
}
p {
    font-size: 1.6rem;
}

// form
input[type='submit'] {
    all: unset;
    background: var(--choco-dark);
    border-radius: 0.35rem;
    height: 29px;
    width: 45px;
}
input[type='text'] {
    border: none;
    font-size: 1.5rem;
    min-width: 15.625rem;
    padding-left: 0.5rem;
    height: 3.125rem;
}

input[type='submit']:hover,
button:hover {
    font-weight: 800;
    scale: 1.04;
    cursor: pointer;
}
button,
button:focus {
    font-size: 1.5rem;
    outline: none;
    background: transparent;
    border: 1px solid transparent;
    cursor: pointer;
}

input[type='submit'],
button:active {
    outline: none;
    background: transparent;
    border: 1px solid grey;
}

textarea {
    padding-left: 0.5rem;
    padding-top: 0.5rem;
    font-size: 1.5rem;
    min-width: 22.5rem;
    min-height: 11.6875rem;
    margin-bottom: 1rem;
    border: none;
}
// END OF FORM

// SCROLL BAR
body::-webkit-scrollbar {
    width: 0.7rem;
}

body::-webkit-scrollbar-track {
    background: var(--choco-dark);
}

body::-webkit-scrollbar-thumb {
    background-color: var(--choco-darkest);
    border-radius: 1.25rem;
    border: 2px solid var(--chocolate);
}
//END OF SCROLL BAR

// HAMBURGER
.hamburger-icon--holder {
    .hamburger-icon {
        display: none;
        cursor: pointer;
    }
}

.hamburger-icon:after,
.hamburger-icon:before,
.hamburger-icon div {
    content: '';
    background-color: #fff;
    border-radius: 0.2rem;
    display: inline-block;
    height: 0.2rem;
    width: 2.5rem;
    margin: 0;
}
//END OF HAMBURGER

// NAV
nav {
    z-index: 100;
    position: relative;
    background-color: var(--chocolate);
    height: var(--nav-height);

    * > * > * {
        cursor: pointer;
    }
    .nav-icon {
        display: none;
    }
    .nav__logo {
        gap: 0.9rem;
        h4 {
            margin-right: -0.6875rem;
        }
        img {
            margin-top: 0.8rem;
        }
    }
    .nav__items {
        height: 100% !important;
    }

    .nav__routes {
        margin: 0 6rem 0 auto;
        display: flex;
        .flex {
            gap: 2.5rem;
        }
        ul {
            li {
                p {
                    &:hover {
                        font-weight: 800;
                    }
                }
            }
            i {
                margin: 0.3rem;
                font-size: 1rem;
            }
            .drop {
                gap: 0.45rem;
            }
        }
    }

    div#dropdown.nav__holder.flex {
        display: flex;
        gap: 0.5rem;
        flex-direction: row;
    }

    .nav__social {
        ul {
            li {
                i {
                    font-size: 1.8rem;
                }
            }
        }
    }

    .nav__login {
        gap: 0.5rem;
        margin-left: 10%;

        .login-btn {
            color: white;
        }
    }
}
//END OF NAV

// STORE LINKS
.nav__store.show_store {
    display: block;
    opacity: 0.9;
}

.nav__store {
    display: none;
    position: absolute;
    top: var(--nav-height);
    z-index: 999;
    left: 0;
    right: 0;
    color: white;
    background-color: var(--choco-dark);
    padding: 2.3rem 0;

    .flex {
        justify-content: center;
    }

    .nav__store__links {
        flex-direction: row;
        flex-wrap: wrap;
        gap: 5.1vw;
        justify-content: center;
        align-items: baseline;
        ul {
            margin-bottom: 1.6rem;
            li {
                flex-direction: column;
                flex-wrap: wrap;
                a,
                h3 {
                    text-align: center;
                    margin-right: auto;
                }
            }
        }
    }
    .special-offer--holder {
        flex-direction: column;
    }
    .special-offer {
        height: 95%;
        border: 1px solid var(--bg);
        padding: 1.4rem 1.8rem;
        margin: 1.8rem auto;
        border-radius: 0.35rem;
        h3 {
            margin: 1rem auto 1rem;
            width: 100%;
            font-size: 2.6rem;
            text-align: center;
        }
        button.btn-white-outline {
            padding: 0.3rem;
            border: 1px solid var(--bg);
            color: white;
            margin: 0 auto;
            width: 100%;
            border-radius: 0.35rem;
        }
    }
}
// END OF STORE LINKS

// MAIN FRONT PAGE
.main.wrapper {
    width: 100%;
    max-width: 100%;
    gap: 5vw;
}
/* ... */

